--- a/src/config.json
+++ b/src/config.json
@@ -1,1 +1,1 @@
-{"mic": [{"type": "basic USB", "is_active": false}, {"type": "ReSpeaker 2/4-Mics Pi HAT", "is_active": false}, {"type": "ReSpeaker Mic Array v2.0", "is_active": true}, {"type": "ReSpeaker Core v2.0", "is_active": false}]}
+{"mic": [{"type": "None Respeaker Mic", "is_active": true}, {"type": "ReSpeaker 2/4-Mics Pi HAT", "is_active": false}, {"type": "ReSpeaker Mic Array v2.0", "is_active": false}, {"type": "ReSpeaker Core v2.0", "is_active": false}]}
